--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,16 +2,19 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700&family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700&family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap");
 
-@font-face { font-family: serif; src: url('fonts/Art-nuvo.otf'); } 
-
-.serif {
-  font-family: 'Art-nuvo', serif;
+@font-face {
+  font-family: sans-serif;
+  src: url("fonts/GeosansLight.ttf");
 }
 
-.sans {
-  font-family: 'Open Sans', sans-serif;
+html {
+  font-family: "Open Sans", sans-serif;
+}
+
+.second-font {
+  font-family: "GeosansLight", sans-serif;
 }
 
 p {
@@ -26,7 +29,8 @@ p {
   line-height: 2rem;
 }
 
-.blogPost img, .blogPost blockquote {
+.blogPost img,
+.blogPost blockquote {
   padding: 20px 0;
 }
 
